[package]
name = "rssbhs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
log = "0.4"
openssl = "0.10"
pretty-hex = "0.3"
pretty_env_logger = "0.4"
slice_as_array = "1.1"
sodiumoxide = "0.2"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = {version = "4.1", features = ["derive"]}
