[package]
name = "rssbhs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = "0.4"
pretty_env_logger = "0.4"
pretty-hex = "0.3"

# serialising/deserialising client longterm keys
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# all the cryptography
sodiumoxide = "0.2"

# decoding network identifier
hex = "0.4"

# helper for creating custom errors
thiserror = "1.0"

# arg parsing
clap = {version = "4.1", features = ["derive"]}

# needed for setting low-level bits so that we can coexist with other ssb servers during local discovery
socket2 = "0.5"
